fix: improve dark mode usage

--- a/src/app.css
+++ b/src/app.css
@@ -42,7 +42,8 @@
 	--sidebar-ring: oklch(0.704 0.04 256.788);
 }
 
-.dark {
+.dark,
+:host([dark-mode]) {
 	--background: oklch(0.129 0.042 264.695);
 	--foreground: oklch(0.984 0.003 247.858);
 	--card: oklch(0.208 0.042 265.755);
@@ -118,7 +119,8 @@
 	* {
 		@apply border-border outline-ring/50;
 	}
-	body {
+	body,
+	:host {
 		@apply bg-background text-foreground;
 	}
 }
